--- a/azure/package.json
+++ b/azure/package.json
@@ -17,14 +17,17 @@
       "<rootDir>/node_modules/"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "ajv": "^6.12.3",
+    "minimist": "^1.2.6"
+  },
   "devDependencies": {
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^21.7.0",
-    "jest": "^27.2.0",
-    "jsdom": "16.4.0",
-    "nock": "^9.6.1"
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
+    "jest": "^28.1.0",
+    "jsdom": "^19.0.0",
+    "nock": "^13.2.4"
   }
 }
